--- a/MacroBuilder/packages.config
+++ b/MacroBuilder/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EasyHook" version="2.7.6684" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
   <package id="SharpDX" version="4.0.1" targetFramework="net471" />
   <package id="SharpDX.D3DCompiler" version="4.0.1" targetFramework="net471" />
   <package id="SharpDX.Desktop" version="4.0.1" targetFramework="net471" />
